class Student {
    constructor(id, name, photoUrl, classGroup, tutor) {
      this.id = id;
      this.name = name;
      this.photoUrl = photoUrl;
      this.classGroup = classGroup;
      this.tutor = tutor;
    }
  }
  module.exports = Student;