class Teacher {
    constructor(id, name, permissionLevel, assignedStudents) {
      this.id = id;
      this.name = name;
      this.permissionLevel = permissionLevel;
      this.assignedStudents = assignedStudents || [];
    }
    assignCard(student, card, permission) {
      // Implementation
    }
    viewPermissions(student) {
      // Implementation
    }
  }
  module.exports = Teacher;